# rag-optimization-cnn-dailymail

./: .gitignore  LICENSE  Makefile  README.md  docker-compose.yaml  main.py  pyproject.toml  rag_system_metrics_comparison.json
.github/workflows/: run_tests.yml
backend/app/: main.py
config/: config_base.yaml  config_baseline.yaml  config_multiquery_500cs.yaml  settings.py  utils.py
data/collection/: cnn_dailymail_validation_subset.csv
data/evaluation_set/: evaluation_set_20d20.csv
data/ragas_results/: bm_baseline_benchmark_results.csv  bm_chunk_size_500_overlap_100_results.csv  bm_cs500_overlap100_multiquery_results.csv  bm_embedding_model_3_large_openai_results.csv  bm_embedding_model_allmpnetv2_results.csv  bm_embedding_model_bge_large_results.csv  bm_embedding_model_bge_small_2_results.csv  bm_embedding_model_bge_small_results.csv  bm_ensemble_prompt_1_results.csv  bm_ensemble_retriever_with_bm25_results.csv  bm_multiquery_500cs100ol_querygen_gpt3-5_results.csv  bm_multiquery_prompt_1_results.csv  bm_multiquery_retriever_results.csv  bm_prompt_engineering_optimization_results.csv  bm_reranker_opensource_model_msmacro_distilbert_results.csv
misc/: settings.py
notebooks/: basic-rag-system-implementation.ipynb  rag-system-implementation.ipynb  rag_system_class.ipynb  rag_system_configs.ipynb  ragas_testing.ipynb
notebooks/benchmark analysis/: compare_benchmarks.ipynb  metrics_analysis.py
notebooks/generate_testset/: generate-testset-with-ragas_langchain.ipynb
notebooks/optimization_techniques/: 2_ensemble_retrievers.ipynb  compare_benchmarks.ipynb  ensembel_retrievers.ipynb  ensemble_retrievers.ipynb  reranking_crossencoder.ipynb
notebooks/pgvector_setup/: create_embeddings.ipynb  pgvector_experiment.ipynb
notebooks/rag-system/: advanced_RAG_system.ipynb  advanced_rag_system.ipynb  baseline_RAG_system.ipynb  basic-rag-system-implementation.ipynb  computer_cost_embeddings_pgvector_experiment.ipynb  langsmith_custom_rag_chain.ipynb  pgvector_experiment.ipynb  rag_system_class.ipynb  rag_system_gemini.ipynb
notebooks/utils_playground/: load_eval_set.ipynb
scripts/: init.sql
src/: __init__.py  dataset_utils.py  env_loader.py  rag_system.py  rag_utils.py  utils.py
src/benchmark_analysis/: __init__.py  benchmarks_analysis.py  compare_benchmarks.py  (+1 more)
(+13 files in other folders)
